@@ -17,6 +17,7 @@ Wagtail ships with a variety of extra optional modules.
     searchpromotions
     table_block
     redirects
+    legacy_richtext
 
 
 :doc:`settings`
@@ -72,3 +73,9 @@ Provides a TableBlock for adding HTML tables to pages.
 -----------------------
 
 Provides a way to manage redirects.
+
+
+:doc:`legacy_richtext`
+-----------------------
+
+Provides the legacy richtext wrapper (``<div class="rich-text"></div>``).
